banner section complete

--- a/index.html
+++ b/index.html
@@ -12,7 +12,82 @@
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 
-<body>
+<body class="font-raleway">
+    <header>
+        <nav class="w-[1171px] mx-auto mt-8 mb-9">
+            <div class="navbar bg-base-100">
+                <div class="navbar-start">
+                  <div class="dropdown">
+                    <div tabindex="0" role="" class="lg:hidden">
+                      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
+                    </div>
+                    <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
+                  </div>
+                  <a class="text-4xl font-extrabold ">E-Ticket</a>
+                </div>
+                <div class="navbar-center hidden lg:flex">
+                  <ul class="menu menu-horizontal px-1 text-lg font-medium">
+                    <li><a>Home</a></li>
+                    <li><a>About</a></li>
+                    <li><a>Destination</a></li>
+                    <li><a>Search</a></li>
+                </ul>
+                </div>
+                <div class="navbar-end">
+                  <a class="btn text-xl font-bold px-7 bg-[rgba(29,209,0,0.10)] border-[#1DD100] rounded-xl common-color">Bus <img src="./images/bus-icon.png" alt=""></a>
+                </div>
+              </div>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <div class="banner-container flex flex-col justify-center items-center gap-8 relative">
+                <h2 class="text-6xl font-extrabold text-white">End-to-End Travel with</h2>
+                <h2 class=" text-6xl font-extrabold common-color">P Paribahan</h2>
+                <p class="text-lg font-normal font-inter text-white">Yes, you can run unit tests and view the results directly within the app. The integrated testing features allow for a streamlined .</p>
+                <button class="btn m-6 text-black bg-[#1DD100] border-none text-xl font-bold">Buy Tickets</button>
+            </div>
+            <div class="flex gap-8 absolute">
+              <!-- div:1  -->
+              <div class="flex gap-3 w-80 h-32 bg-white rounded-3xl border-b-4 border-[#1DD100] justify-center items-center">
+                <div>
+                  <img src="./icon/tabler-icon-users-group.jpg" alt="">
+                </div>
+                <div>
+                  <h2 class="font-inter text-4xl font-bold">500k+</h2>
+                  <p class="font-inter text-lg font-normal">Registered users</p>
+                </div>
+              </div>
+              <!-- div:2  -->
+              <div class="flex gap-3 w-80 h-32 bg-white rounded-3xl border-b-4 border-[#1DD100] justify-center items-center">
+                <div>
+                  <img src="./icon/tabler-icon-ticket.jpg" alt="">
+                </div>
+                <div>
+                  <h2 class="font-inter text-4xl font-bold">1.7 lacks</h2>
+                  <p class="font-inter text-lg font-normal">Tickets sold</p>
+                </div>
+              </div>
+              <!-- div:3  -->
+              <div class="flex gap-3 w-80 h-32 bg-white rounded-3xl border-b-4 border-[#1DD100] justify-center items-center">
+                <div>
+                  <img src="./icon/tabler-icon-bus-stop.jpg" alt="">
+                </div>
+                <div>
+                  <h2 class="font-inter text-4xl font-bold">80K+</h2>
+                  <p class="font-inter text-lg font-normal">Rental partners</p>
+                </div>
+              </div>
+
+            </div>
+        </section>
+        <section class="w-[1171px] mx-auto mt-44 mb-28">
+          <h2 class="text-center text-4xl font-bold">Best offers for you</h2>
+        </section>
+    </main>
+    <footer>
+
+    </footer>
     <!-- javascript files      -->
     <script src="./script.js/app.js"></script>
 </body>
