--- a/index.html
+++ b/index.html
@@ -2,94 +2,164 @@
 <html lang="en" data-theme="light">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <!-- daisy ui and tailwind css  -->
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css" />
-    <script src="https://cdn.tailwindcss.com"></script>
-    <!-- css link -->
-    <link rel="stylesheet" href="./styles/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <!-- daisy ui and tailwind css  -->
+  <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  <!-- css link -->
+  <link rel="stylesheet" href="./styles/style.css">
 </head>
 
 <body class="font-raleway">
-    <header>
-        <nav class="w-[1171px] mx-auto mt-8 mb-9">
-            <div class="navbar bg-base-100">
-                <div class="navbar-start">
-                  <div class="dropdown">
-                    <div tabindex="0" role="" class="lg:hidden">
-                      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
-                    </div>
-                    <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
-                  </div>
-                  <a class="text-4xl font-extrabold ">E-Ticket</a>
-                </div>
-                <div class="navbar-center hidden lg:flex">
-                  <ul class="menu menu-horizontal px-1 text-lg font-medium">
-                    <li><a>Home</a></li>
-                    <li><a>About</a></li>
-                    <li><a>Destination</a></li>
-                    <li><a>Search</a></li>
-                </ul>
-                </div>
-                <div class="navbar-end">
-                  <a class="btn text-xl font-bold px-7 bg-[rgba(29,209,0,0.10)] border-[#1DD100] rounded-xl common-color">Bus <img src="./images/bus-icon.png" alt=""></a>
-                </div>
-              </div>
-        </nav>
-    </header>
-    <main>
-        <section>
-            <div class="banner-container flex flex-col justify-center items-center gap-8 relative">
-                <h2 class="text-6xl font-extrabold text-white">End-to-End Travel with</h2>
-                <h2 class=" text-6xl font-extrabold common-color">P Paribahan</h2>
-                <p class="text-lg font-normal font-inter text-white">Yes, you can run unit tests and view the results directly within the app. The integrated testing features allow for a streamlined .</p>
-                <button class="btn m-6 text-black bg-[#1DD100] border-none text-xl font-bold">Buy Tickets</button>
+  <header>
+    <nav class="w-[1171px] mx-auto mt-8 mb-9">
+      <div class="navbar bg-base-100">
+        <div class="navbar-start">
+          <div class="dropdown">
+            <div tabindex="0" role="" class="lg:hidden">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" />
+              </svg>
             </div>
-            <div class="flex gap-8 absolute">
-              <!-- div:1  -->
-              <div class="flex gap-3 w-80 h-32 bg-white rounded-3xl border-b-4 border-[#1DD100] justify-center items-center">
-                <div>
-                  <img src="./icon/tabler-icon-users-group.jpg" alt="">
-                </div>
-                <div>
-                  <h2 class="font-inter text-4xl font-bold">500k+</h2>
-                  <p class="font-inter text-lg font-normal">Registered users</p>
-                </div>
-              </div>
-              <!-- div:2  -->
-              <div class="flex gap-3 w-80 h-32 bg-white rounded-3xl border-b-4 border-[#1DD100] justify-center items-center">
-                <div>
-                  <img src="./icon/tabler-icon-ticket.jpg" alt="">
-                </div>
-                <div>
-                  <h2 class="font-inter text-4xl font-bold">1.7 lacks</h2>
-                  <p class="font-inter text-lg font-normal">Tickets sold</p>
-                </div>
-              </div>
-              <!-- div:3  -->
-              <div class="flex gap-3 w-80 h-32 bg-white rounded-3xl border-b-4 border-[#1DD100] justify-center items-center">
-                <div>
-                  <img src="./icon/tabler-icon-bus-stop.jpg" alt="">
-                </div>
-                <div>
-                  <h2 class="font-inter text-4xl font-bold">80K+</h2>
-                  <p class="font-inter text-lg font-normal">Rental partners</p>
-                </div>
-              </div>
+            <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
+          </div>
+          <a class="text-4xl font-extrabold ">E-Ticket</a>
+        </div>
+        <div class="navbar-center hidden lg:flex">
+          <ul class="menu menu-horizontal px-1 text-lg font-medium">
+            <li><a>Home</a></li>
+            <li><a>About</a></li>
+            <li><a>Destination</a></li>
+            <li><a>Search</a></li>
+          </ul>
+        </div>
+        <div class="navbar-end">
+          <a class="btn text-xl font-bold px-7 bg-[rgba(29,209,0,0.10)] border-[#1DD100] rounded-xl common-color">Bus
+            <img src="./images/bus-icon.png" alt=""></a>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <main>
+    <section>
+      <div class="banner-container flex flex-col justify-center items-center gap-8 relative">
+        <h2 class="text-6xl font-extrabold text-white">End-to-End Travel with</h2>
+        <h2 class=" text-6xl font-extrabold common-color">P Paribahan</h2>
+        <p class="text-lg font-normal font-inter text-white">Yes, you can run unit tests and view the results directly
+          within the app. The integrated testing features allow for a streamlined .</p>
+        <button class="btn rounded-xl text-black bg-[#1DD100] border-none text-xl font-bold">Buy Tickets</button>
+      </div>
+      <div class="flex gap-8 absolute">
+        <!-- div:1  -->
+        <div class="flex gap-3 w-80 h-32 bg-white rounded-3xl border-b-4 border-[#1DD100] justify-center items-center">
+          <div>
+            <img src="./icon/tabler-icon-users-group.jpg" alt="">
+          </div>
+          <div>
+            <h2 class="font-inter text-4xl font-bold">500k+</h2>
+            <p class="font-inter text-lg font-normal">Registered users</p>
+          </div>
+        </div>
+        <!-- div:2  -->
+        <div class="flex gap-3 w-80 h-32 bg-white rounded-3xl border-b-4 border-[#1DD100] justify-center items-center">
+          <div>
+            <img src="./icon/tabler-icon-ticket.jpg" alt="">
+          </div>
+          <div>
+            <h2 class="font-inter text-4xl font-bold">1.7 lacks</h2>
+            <p class="font-inter text-lg font-normal">Tickets sold</p>
+          </div>
+        </div>
+        <!-- div:3  -->
+        <div class="flex gap-3 w-80 h-32 bg-white rounded-3xl border-b-4 border-[#1DD100] justify-center items-center">
+          <div>
+            <img src="./icon/tabler-icon-bus-stop.jpg" alt="">
+          </div>
+          <div>
+            <h2 class="font-inter text-4xl font-bold">80K+</h2>
+            <p class="font-inter text-lg font-normal">Rental partners</p>
+          </div>
+        </div>
 
+      </div>
+    </section>
+    <section class="w-[1171px] mx-auto mt-44 mb-28">
+      <h2 class="text-center text-4xl font-bold">Best offers for you</h2>
+      <div class="flex justify-between  mt-12 mb-20">
+        <!-- coupon code:1 -->
+        <div class="w-[550px] h-48 rounded-3xl bg-[#FFBF0F] flex justify-between">
+          <div class="flex flex-col justify-center items-center font-inter">
+            <h2 class="text-5xl font-black  mt-4">15% OFF</h2>
+            <h2 class="text-2xl font-normal ml-10 mt-2 mb-2">on your next purchase</h2>
+            <p class="text-lg font-medium text-[rgba(3,7,18,0.50)] ml-2">use by January 2024</p>
+          </div>
+          <img src="./images/info-devider.png" alt="">
+          <div class="m-10 flex flex-col justify-center items-center">
+            <h2 class="text-3xl font-bold mb-1">NEW <sub>15</sub></h2>
+            <p class="text-xl font-medium text-[rgba(3,7,18,0.40)] mt-">Coupon Code</p>
+          </div>
+        </div>
+        <!-- coupon code:2  -->
+        <div class="w-[550px] h-48 rounded-3xl bg-[#F78C9C] flex justify-between">
+          <div class="flex flex-col justify-center items-center font-inter ml-3">
+            <h2 class="text-5xl font-black  mt-4">20% OFF</h2>
+            <h2 class="text-2xl font-normal pl-5">on your next purchase</h2>
+            <p class="text-lg font-medium text-[rgba(3,7,18,0.50)] pl-4">use by January 2024</p>
+          </div>
+          <img src="./images/info-devider.png" alt="">
+          <div class="m-10 flex flex-col justify-center items-center">
+            <h2 class="text-3xl font-bold mb-1">Couple 20</h2>
+            <p class="text-xl font-medium text-[rgba(3,7,18,0.40)] mt-">Coupon Code</p>
+          </div>
+        </div>
+      </div>
+      <div class="flex justify-center">
+        <button class="btn text-[#1DD100] bg-white border-[#1DD100]">See All Offers</button>
+      </div>
+    </section>
+    <section class="rounded-t-[60px] border-t-2 border-[#1DD100] bg-[#F7F8F8]">
+      <h2 class="text-center mt-28 mb-6 text-4xl font-bold">P.H Paribahan</h2>
+      <p class="text-center mb-12 text-lg font-normal">Yes, you can run unit tests and view the results directly within
+        the app. The integrated<br> testing features allow for a streamlined .</p>
+      <div class="w-[1171px] mx-auto bg-white">
+        <div class="flex">
+        <div class="flex w-3/4 justify-between">
+          <!-- greenline peribahan -->
+
+          <div class="flex justify-between gap-3">
+            <div>
+              <img src="./images/bus-logo.png" alt="">
             </div>
-        </section>
-        <section class="w-[1171px] mx-auto mt-44 mb-28">
-          <h2 class="text-center text-4xl font-bold">Best offers for you</h2>
-        </section>
-    </main>
-    <footer>
+            <div>
+              <h2 class="text-3xl font-bold">Greenline Paribahan</h2>
+              <p class="text-xl font-normal">Coach-009-WEB ! AC_Business</p>
+            </div>
+          </div>
+          <div>
+            <button class="btn font-inter bg-[rgba(29,209,0,0.15)] text-[#1DD100]"><img src="./images/seat-green.png" alt=""><span>40</span> Seats left</button>
+          </div>
+        </div>
+        <img src="./images/info-devider.png" alt="">
+        <div class="w-1/4 flex justify-center items-center">
+          <!-- taka  -->
+          <div class="">
+            <img src="./images/fare.png" alt="">
+          <h2 class="text-3xl font-bold">550 Taka</h2>
+          <p class="text-2xl font-semibold">Per Seat</p>
+          </div>
+        </div>
+        </div>
+      </div>
+    </section>
+  </main>
+  <footer>
 
-    </footer>
-    <!-- javascript files      -->
-    <script src="./script.js/app.js"></script>
+  </footer>
+  <!-- javascript files      -->
+  <script src="./script.js/app.js"></script>
 </body>
 
 </html>
