--- a/index.html
+++ b/index.html
@@ -120,38 +120,235 @@
         <button class="btn text-[#1DD100] bg-white border-[#1DD100]">See All Offers</button>
       </div>
     </section>
-    <section class="rounded-t-[60px] border-t-2 border-[#1DD100] bg-[#F7F8F8]">
-      <h2 class="text-center mt-28 mb-6 text-4xl font-bold">P.H Paribahan</h2>
-      <p class="text-center mb-12 text-lg font-normal">Yes, you can run unit tests and view the results directly within
-        the app. The integrated<br> testing features allow for a streamlined .</p>
-      <div class="w-[1171px] mx-auto bg-white">
-        <div class="flex">
-        <div class="flex w-3/4 justify-between">
-          <!-- greenline peribahan -->
+    <section class="rounded-t-[60px] border-t-2 border-[#1DD100] bg-[#F7F8F8] w-full">
+      <div class="w-[1171px] mx-auto">
+        <h2 class="text-center mt-28 mb-6 text-4xl font-bold">P.H Paribahan</h2>
+        <p class="text-center mb-12 text-lg font-normal">Yes, you can run unit tests and view the results directly
+          within
+          the app. The integrated<br> testing features allow for a streamlined .</p>
+        <div class="w-[1171px] mx-auto bg-white rounded-3xl flex gap-8 items-center">
+          <!-- bus coach and time  -->
+          <div>
+            <div class="">
+              <div class=" flex justify-between">
+                <div class="flex gap-3 ml-6">
+                  <img class="w-16 h-12" src="./images/bus-logo.png" alt="">
+                  <div>
+                    <h2 class="text-3xl font-bold">Greenline Paribahan</h2>
+                    <p class="text-xl font-normal">Coach-009-WEB ! AC_Business</p>
+                  </div>
+                </div>
+                <div>
+                  <button class="btn font-inter bg-[rgba(29,209,0,0.15)] text-[#1DD100]"><img
+                      src="./images/seat-green.png" alt=""><span>40</span> Seats left</button>
+                </div>
+              </div>
+              <!-- route of bus  -->
+              <div class="bg-[#F7F8F8] w-[800px] min-h-[258px] rounded-3xl">
+                <div class="flex justify-between ml-8 mt-6 mb-6 mr-8">
+                  <h1 class="text-lg font-semibold text-[rgba(3,7,18,0.60)] mt-8">Route</h1>
+                  <h2 class="text-lg font-semibold text-[#030712] mt-8">Dhaka - Sylhet</h2>
+                </div>
+                <hr>
+                <div class="flex justify-between ml-8 mt-6 mb-6 mr-8">
+                  <h1 class="text-lg font-semibold text-[rgba(3,7,18,0.60)]">Departure Time</h1>
+                  <h2 class="text-lg font-semibold text-[#030712]">9:00 PM</h2>
+                </div>
+                <hr>
+                <div class="flex justify-around mt-6">
+                  <button class="btn bg-[rgba(3, 7, 18, 0.05);]">Boarding Point - Laxmipur</button>
+                  <button class="btn bg-[rgba(3, 7, 18, 0.05);]">Dropping Point - Bogura</button>
+                  <button class="btn bg-[rgba(3, 7, 18, 0.05);]">Est. Time - 11 Hour</button>
+                </div>
+              </div>
+            </div>
 
-          <div class="flex justify-between gap-3">
-            <div>
-              <img src="./images/bus-logo.png" alt="">
+          </div>
+          <img src="./images/info-devider.png" alt="">
+          <!-- bus fare  -->
+          <div class="flex flex-col items-center">
+            <img src="./images/fare.png" alt="">
+            <h2 class="text-3xl font-bold">550 Taka</h2>
+            <p class="text-2xl font-semibold">Per Seat</p>
+          </div>
+        </div>
+      </div>
+
+
+      <!-- Select Your Seat section  -->
+      <div>
+        <div class="mt-6 bg-white rounded-3xl mx-auto p-8 w-[1171px] flex gap-16">
+          <div>
+            <h2 class="text-2xl font-semibold">Select Your Seat</h2>
+            <hr class="my-6">
+            <div class="flex justify-between">
+              <div class="flex">
+                <img src="./images/seat-green.png" alt="">
+                <h2 class="text-lg font-medium text-[rgba(3,7,18,0.50)]">Avaliable</h2>
+              </div>
+              <div class="flex"><img src="./images/seat-green-filled.png" alt="">
+                <h2 class="text-lg font-medium text-[#1DD100]">Selected</h2>
+              </div>
             </div>
-            <div>
-              <h2 class="text-3xl font-bold">Greenline Paribahan</h2>
-              <p class="text-xl font-normal">Coach-009-WEB ! AC_Business</p>
-            </div>
+            <hr">
+              <div class="flex justify-end my-6">
+                <button class="w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center"><img
+                    src="./images/tabler-icon-steering-wheel.svg" alt=""></button>
+              </div>
+              <div class="flex gap-16">
+                <div class="grid grid-cols-1 *:flex *:items-center gap-8">
+                  <p>A</p>
+                  <p>B</p>
+                  <p>C</p>
+                  <p>D</p>
+                  <p>E</p>
+                  <p>F</p>
+                  <p>G</p>
+                  <p>H</p>
+                  <P>I</P>
+                  <P>J</P>
+                </div>
+                <div class="grid grid-cols-2 gap-8">
+                  <button
+                    class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">A1</button>
+                  <button
+                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">A2</button>
+                  <button
+                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">B1</button>
+                  <button
+                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">B2</button>
+                  <button
+                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">C1</button>
+                  <button
+                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">C2</button>
+                  <button
+                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">D1</button>
+                  <button
+                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">D2</button>
+                  <button
+                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">E1</button>
+                  <button
+                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">E2</button>
+                  <button
+                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">F1</button>
+                  <button
+                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">F2</button>
+                  <button
+                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">G1</button>
+                  <button
+                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">G2</button>
+                  <button
+                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">H1</button>
+                  <button
+                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">H2</button>
+                  <button
+                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">I1</button>
+                  <button
+                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">I2</button>
+                  <button
+                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">J1</button>
+                  <button
+                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">J2</button>
+                </div>
+                <div class="grid grid-cols-2 gap-8">
+                  <button
+                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">A3</button>
+                  <button
+                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">A4</button>
+                  <button
+                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">B3</button>
+                  <button
+                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">B4</button>
+                  <button
+                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">C3</button>
+                  <button
+                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">C4</button>
+                  <button
+                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">D3</button>
+                  <button
+                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">D4</button>
+                  <button
+                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">E3</button>
+                  <button
+                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">E4</button>
+                  <button
+                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">F3</button>
+                  <button
+                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">F4</button>
+                  <button
+                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">G3</button>
+                  <button
+                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">G4</button>
+                  <button
+                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">H3</button>
+                  <button
+                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">H4</button>
+                  <button
+                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">I3</button>
+                  <button
+                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">I4</button>
+                  <button
+                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">J3</button>
+                  <button
+                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">J4</button>
+                </div>
+              </div>
           </div>
           <div>
-            <button class="btn font-inter bg-[rgba(29,209,0,0.15)] text-[#1DD100]"><img src="./images/seat-green.png" alt=""><span>40</span> Seats left</button>
+
+            <h2 class="text-2xl font-semibold">Select Your Seat</h2>
+            <hr class="my-6">
+            <div class="w-[435px] h-[335px] bg-[#F7F8F8] rounded-xl p-8">
+              <div class="overflow-x-auto">
+                <table class="table">
+                  <!-- head -->
+                  <thead>
+                    <tr>
+                      <th class="text-base font-medium font-inter text-black">Seat<span class="bg-[#1DD100] text-white">0</span></th>
+                      <th class="text-base font-medium font-inter text-black">Class</th>
+                      <th class="text-base font-medium font-inter text-black">Price</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <!-- row 1 -->
+                    <tr>
+                      <td class="text-base font-normal text-[rgba(3,7,18,0.60)] font-inter">Cy Ganderton</td>
+                      <td class="text-base font-normal text-[rgba(3,7,18,0.60)] font-inter">Quality Control Specialist</td>
+                      <td class="text-base font-normal text-[rgba(3,7,18,0.60)] font-inter">Blue</td>
+                    </tr>
+                  </tbody>
+                </table>
+                <hr class="mb-4">
+                <div class="flex justify-between mb-4">
+                  <h2 class="text-base font-medium font-inter">Total Price</h2>
+                  <h2 class="text-base font-medium font-inter">BDT<span>0</span></h2>
+                </div>
+                <div class="bg-white rounded-xl flex justify-evenly gap-20 mb-6">
+                  <input type="text" placeholder="Have any copupon?">
+                  <button class="btn bg-[#1DD100] rounded-lg w-20 h-10">Apply</button>
+                </div>
+                <div class="flex justify-between">
+                  <h2 class="text-base font-medium font-inter">Grand Total</h2>
+                  <h2 class="text-base font-medium font-inter">BDT<span>0</span></h2>
+                </div>
+              </div>
+            </div>
+            <div class="mt-6">
+              <h1 class="text-base font-semibold font-inter mb-4">Passenger Name*</h1>
+              <input type="text" placeholder="Enter your name" class="input input-bordered w-full mb-6" />
+              <h1 class="text-base font-semibold font-inter mb-4">Phone Number*</h1>
+              <input type="number" placeholder="Enter your phone number" class="input input-bordered w-full mb-6" />
+              <h1 class="text-base font-semibold font-inter mb-4">Email ID</h1>
+              <input type="email" placeholder="Enter your email id" class="input input-bordered w-full mb-6" />
+            </div>
+            <button class="btn w-full bg-[#1DD100] text-white text-xl font-extra">Next</button>
+            <div class="flex gap-12 ml-8 mt-6">
+              <a href="#">Terms and Conditions</a>
+              <a href="#">Cancellation Policy</a>
+            </div>
           </div>
         </div>
-        <img src="./images/info-devider.png" alt="">
-        <div class="w-1/4 flex justify-center items-center">
-          <!-- taka  -->
-          <div class="">
-            <img src="./images/fare.png" alt="">
-          <h2 class="text-3xl font-bold">550 Taka</h2>
-          <p class="text-2xl font-semibold">Per Seat</p>
-          </div>
-        </div>
-        </div>
+      </div>
       </div>
     </section>
   </main>
