simple javascript complete

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 </div>
                 <div>
                   <button class="btn font-inter bg-[rgba(29,209,0,0.15)] text-[#1DD100]"><img
-                      src="./images/seat-green.png" alt=""><span>40</span> Seats left</button>
+                      src="./images/seat-green.png" alt=""><span id="seatLeft">40</span> Seats left</button>
                 </div>
               </div>
               <!-- route of bus  -->
@@ -210,87 +210,87 @@
                 </div>
                 <div class="grid grid-cols-2 gap-8">
                   <button
-                    class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">A1</button>
+                   id="btn" class="btn-seat btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">A1</button>
                   <button
-                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">A2</button>
+                   id="btn" class="btn-seat btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">A2</button>
                   <button
-                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">B1</button>
+                   id="btn" class="btn-seat btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">B1</button>
                   <button
-                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">B2</button>
+                   id="btn" class="btn-seat btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">B2</button>
                   <button
-                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">C1</button>
+                   id="btn" class="btn-seat btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">C1</button>
                   <button
-                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">C2</button>
+                   id="btn" class="btn-seat btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">C2</button>
                   <button
-                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">D1</button>
+                   id="btn" class="btn-seat btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">D1</button>
                   <button
-                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">D2</button>
+                   id="btn" class="btn-seat btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">D2</button>
                   <button
-                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">E1</button>
+                   id="btn" class="btn-seat btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">E1</button>
                   <button
-                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">E2</button>
+                   id="btn" class="btn-seat btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">E2</button>
                   <button
-                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">F1</button>
+                   id="btn" class="btn-seat btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">F1</button>
                   <button
-                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">F2</button>
+                   id="btn" class="btn-seat btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">F2</button>
                   <button
-                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">G1</button>
+                   id="btn" class="btn-seat btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">G1</button>
                   <button
-                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">G2</button>
+                   id="btn" class="btn-seat btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">G2</button>
                   <button
-                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">H1</button>
+                   id="btn" class="btn-seat btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">H1</button>
                   <button
-                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">H2</button>
+                   id="btn" class="btn-seat btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">H2</button>
                   <button
-                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">I1</button>
+                   id="btn" class="btn-seat btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">I1</button>
                   <button
-                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">I2</button>
+                   id="btn" class="btn-seat btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">I2</button>
                   <button
-                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">J1</button>
+                   id="btn" class="btn-seat btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">J1</button>
                   <button
-                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">J2</button>
+                   id="btn" class="btn-seat btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">J2</button>
                 </div>
                 <div class="grid grid-cols-2 gap-8">
                   <button
-                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">A3</button>
+                   id="btn" class="btn-seat btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">A3</button>
                   <button
-                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">A4</button>
+                   id="btn" class="btn-seat btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">A4</button>
                   <button
-                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">B3</button>
+                   id="btn" class="btn-seat btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">B3</button>
                   <button
-                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">B4</button>
+                   id="btn" class="btn-seat btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">B4</button>
                   <button
-                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">C3</button>
+                   id="btn" class="btn-seat btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">C3</button>
                   <button
-                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">C4</button>
+                   id="btn" class="btn-seat btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">C4</button>
                   <button
-                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">D3</button>
+                   id="btn" class="btn-seat btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">D3</button>
                   <button
-                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">D4</button>
+                   id="btn" class="btn-seat btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">D4</button>
                   <button
-                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">E3</button>
+                   id="btn" class="btn-seat btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">E3</button>
                   <button
-                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">E4</button>
+                   id="btn" class="btn-seat btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">E4</button>
                   <button
-                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">F3</button>
+                   id="btn" class="btn-seat btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">F3</button>
                   <button
-                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">F4</button>
+                   id="btn" class="btn-seat btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">F4</button>
                   <button
-                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">G3</button>
+                   id="btn" class="btn-seat btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">G3</button>
                   <button
-                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">G4</button>
+                   id="btn" class="btn-seat btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">G4</button>
                   <button
-                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">H3</button>
+                   id="btn" class="btn-seat btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">H3</button>
                   <button
-                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">H4</button>
+                   id="btn" class="btn-seat btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">H4</button>
                   <button
-                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">I3</button>
+                   id="btn" class="btn-seat btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">I3</button>
                   <button
-                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">I4</button>
+                   id="btn" class="btn-seat btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">I4</button>
                   <button
-                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">J3</button>
+                   id="btn" class="btn-seat btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">J3</button>
                   <button
-                   id="btn" class=" btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">J4</button>
+                   id="btn" class="btn-seat btn w-24 h-14 rounded-xl bg-[rgba(3,7,18,0.10)] flex justify-center items-center">J4</button>
                 </div>
               </div>
           </div>
@@ -298,38 +298,38 @@
 
             <h2 class="text-2xl font-semibold">Select Your Seat</h2>
             <hr class="my-6">
-            <div class="w-[435px] h-[335px] bg-[#F7F8F8] rounded-xl p-8">
+            <div class="w-[435px] h-[450px] bg-[#F7F8F8] rounded-xl p-8">
               <div class="overflow-x-auto">
                 <table class="table">
                   <!-- head -->
                   <thead>
                     <tr>
-                      <th class="text-base font-medium font-inter text-black">Seat<span class="bg-[#1DD100] text-white">0</span></th>
-                      <th class="text-base font-medium font-inter text-black">Class</th>
-                      <th class="text-base font-medium font-inter text-black">Price</th>
+                      <th  class="text-base font-medium font-inter text-black">Seat<span id="SeatIncrease" class="bg-[#1DD100] text-white">0</span></th>
+                      <th  class="text-base font-medium font-inter text-black">Class</th>
+                      <th  class="text-base font-medium font-inter text-black">Price</th>
                     </tr>
                   </thead>
-                  <tbody>
+                  <tbody id="seatSummary" class="text-base font-normal text-[rgba(3,7,18,0.60)] font-inter">
                     <!-- row 1 -->
-                    <tr>
-                      <td class="text-base font-normal text-[rgba(3,7,18,0.60)] font-inter">Cy Ganderton</td>
-                      <td class="text-base font-normal text-[rgba(3,7,18,0.60)] font-inter">Quality Control Specialist</td>
-                      <td class="text-base font-normal text-[rgba(3,7,18,0.60)] font-inter">Blue</td>
-                    </tr>
+                    <!-- <tr>
+                      <td id="seat" class="text-base font-normal text-[rgba(3,7,18,0.60)] font-inter">Cy Ganderton</td>
+                      <td id="class" class="text-base font-normal text-[rgba(3,7,18,0.60)] font-inter">Quality Control Specialist</td>
+                      <td id="price" class="text-base font-normal text-[rgba(3,7,18,0.60)] font-inter">Blue</td>
+                    </tr> -->
                   </tbody>
                 </table>
                 <hr class="mb-4">
                 <div class="flex justify-between mb-4">
                   <h2 class="text-base font-medium font-inter">Total Price</h2>
-                  <h2 class="text-base font-medium font-inter">BDT<span>0</span></h2>
+                  <h2 class="text-base font-medium font-inter">BDT<span id="totalCost">0</span></h2>
                 </div>
                 <div class="bg-white rounded-xl flex justify-evenly gap-20 mb-6">
-                  <input type="text" placeholder="Have any copupon?">
-                  <button class="btn bg-[#1DD100] rounded-lg w-20 h-10">Apply</button>
+                  <input id="couponCode" type="text" placeholder="Have any copupon?">
+                  <button onclick="grandTotal('apply')" class="btn bg-[#1DD100] rounded-lg w-20 h-10">Apply</button>
                 </div>
                 <div class="flex justify-between">
                   <h2 class="text-base font-medium font-inter">Grand Total</h2>
-                  <h2 class="text-base font-medium font-inter">BDT<span>0</span></h2>
+                  <h2 class="text-base font-medium font-inter">BDT<span id="grandTotal">0</span></h2>
                 </div>
               </div>
             </div>
@@ -341,7 +341,7 @@
               <h1 class="text-base font-semibold font-inter mb-4">Email ID</h1>
               <input type="email" placeholder="Enter your email id" class="input input-bordered w-full mb-6" />
             </div>
-            <button class="btn w-full bg-[#1DD100] text-white text-xl font-extra">Next</button>
+            <button disabled class="btn w-full bg-[#1DD100] text-white text-xl font-extra">Next</button>
             <div class="flex gap-12 ml-8 mt-6">
               <a href="#">Terms and Conditions</a>
               <a href="#">Cancellation Policy</a>
