--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                 </div>
                 <div class="bg-white rounded-xl flex justify-evenly gap-20 mb-6">
                   <input id="couponCode" type="text" placeholder="Have any copupon?">
-                  <button onclick="grandTotal('apply')" class="btn bg-[#1DD100] rounded-lg w-20 h-10">Apply</button>
+                  <button onclick="grandTotal()" class="btn bg-[#1DD100] rounded-lg w-20 h-10">Apply</button>
                 </div>
                 <div class="flex justify-between">
                   <h2 class="text-base font-medium font-inter">Grand Total</h2>
