final project complete

--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
               <h1 class="text-base font-semibold font-inter mb-4">Email ID</h1>
               <input type="email" placeholder="Enter your email id" class="input input-bordered w-full mb-6" />
             </div>
-            <button id="btnNext" disabled class="btn w-full bg-[#1DD100] text-white text-xl font-extra">Next</button>
+            <a href="./modal.html" id="btnNext" disabled class="btn w-full bg-[#1DD100] text-white text-xl font-extra">Next</a>
             <div class="flex gap-12 ml-8 mt-6">
               <a href="#">Terms and Conditions</a>
               <a href="#">Cancellation Policy</a>
