--- a/modal.html
+++ b/modal.html
@@ -9,13 +9,13 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-[#F2F1F1] min-h-screen min-w-screen flex justify-center items-center">
-        <section class=" flex flex-col justify-center items-center bg-white w-[718px] h-[481px]">
+        <section class=" flex flex-col justify-center items-center bg-white w-[718px] h-[481px] rounded-xl">
             <img class="mt-14 mb-9" src="./images/success.png" alt="">
             <h2 class="mb-9 text-2xl font-bold text-[#27AE60]">SUCCESS</h2>
             <p class="mb-7 text-center text-[#4A4A4A] text-xl font-light">Thank you for Booking Our Bus Seats. <br>
                 We are working hard to find the best service and deals for you.</p>
                 <p class="mb-8">Shortly you will find a confirmation in your email.</p>
-                <button class="btn bg-[#27AE60] border-none" >Continue</button>
+                <button class="btn w-[300px] h-[55px] mb-10 rounded-[32px] bg-[#27AE60] border-none" >Continue</button>
         </section>
     </main>
 </body>
